eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: klusta-api-service
spec:
  selector:
    app: klusta-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http-server
  type: ClusterIP
