eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klusta-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "api.dply-wc-fdgames.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: klusta-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.dply-wc-fdgames.com
      secretName: klusta-api-cert
